<resources>
    <string name="app_name">Кредитный калькулятор</string>

    <string name="result_pay">Ежемесячный\nплатеж</string>
    <string name="result_all_pay">Всего выплат</string>
    <string name="result_over_pay">Сумма переплат</string>
    <string name="result_over_percent">Процент переплат</string>

    <string name="credit_date">Дата выдачи</string>
    <string name="credit_sum">Сумма кредита</string>
    <string name="credit_length">Срок, мес/лет</string>
    <string name="credit_percent">Процентная ставка</string>

    <string name="bottom_caption">Дополнительные параметры</string>

    <string name="calc_by_sum">Расчет по сумме кредита</string>
    <string name="calc_by_pay">Расчет по сумме платежа</string>
    <string name="calc_annuity">Ануитетные платежи</string>
    <string name="calc_differential">Дифференцированные платежи</string>
    <string name="calc_first_only_percent">Первый платеж - только проценты</string>

    <string name="ok_caption">OK</string>
    <string name="cancel_caption">Отмена</string>
    <string name="back_char"><![CDATA[<-]]></string>
    <string name="clear_char">C</string>
    <string name="punct_char">.</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>

    <string name="save_action">Сохранить</string>
    <string name="send_e_mail_action">Отправить на E-mail</string>
    <string name="credit_list_action">Список расчетов</string>
    <string name="new_credit_action">Новый расчет</string>
    <string name="settings_action">Настройки</string>
    <string name="current_calc">Текущий расчет</string>

    <string name="graphic_caption_app">График платежей</string>
    <string name="graphic_caption_period">Период\nоплаты</string>
    <string name="graphic_caption_percent">Оплата\nпроцентов</string>
    <string name="graphic_caption_pays">Гашение\nкредита</string>

    <string name="e_mail">E-mail для отчетов</string>

    <string name="saved_setting">Настройки сохранены</string>
    <string name="saved_calc">Расчет сохранен</string>

</resources>
