<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/current_calc">
        <menu>
            <group android:checkableBehavior="none">

                <item android:id="@+id/save_action"
                    android:icon="@drawable/ic_save_gray_24dp"
                    android:title="@string/save_action"/>

                <item android:id="@+id/send_action"
                    android:icon="@drawable/ic_send_gray_24dp"
                    android:title="@string/send_e_mail_action"/>
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="none">
        <item android:id="@+id/calc_list"
            android:icon="@drawable/ic_list_gray_24dp"
            android:title="@string/credit_list_action"/>

        <item android:id="@+id/new_credit"
            android:icon="@drawable/ic_add_circle_gray_24dp"
            android:title="@string/new_credit_action"/>

        <item android:id="@+id/settings"
            android:icon="@drawable/ic_settings_gray_24dp"
            android:title="@string/settings_action"/>
    </group>
</menu>