<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/primary_middle"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/size_medium_48"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/bottom_sheet_caption"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_medium_48"
        android:background="@color/primary"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/space_normal_16"
        android:text="@string/bottom_caption"
        android:textColor="@android:color/white"
        android:textSize="@dimen/space_normal_16"
        android:fontFamily="sans-serif-condensed"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/space_normal_16"
        android:layout_marginLeft="@dimen/space_small_8"
        android:layout_marginRight="@dimen/space_normal_16"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/params"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/space_small_8"
                android:textSize="@dimen/font_normal_16"
                android:text="@string/credit_date"/>

            <TextView
                android:id="@+id/credit_date"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:layout_marginLeft="@dimen/space_normal_16"
                android:textSize="@dimen/font_large_24"
                style="@style/params"/>

        </LinearLayout>

        <View
            style="@style/calc_separator"/>

<!--    Временно скрыты неиспользуемые элементы
        пока не написана обработка

        <RadioButton
            android:id="@+id/calc_by_sum"
            style="@style/params.rb"
            android:text="@string/calc_by_sum"
            android:visibility="gone"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/calc_by_pay"
            style="@style/params.rb"
            android:visibility="gone"
            android:text="@string/calc_by_pay"/>

        <View
            style="@style/calc_separator"
            android:visibility="gone"/>
-->

        <RadioButton
            android:id="@+id/annuity_rb"
            style="@style/params.rb"
            android:text="@string/calc_annuity"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/differential_rb"
            style="@style/params.rb"
            android:text="@string/calc_differential"/>

        <View
            style="@style/calc_separator"/>

        <CheckBox
            android:id="@+id/first_pay_percent_cb"
            style="@style/params.rb"
            android:text="@string/calc_first_only_percent"/>

    </LinearLayout>

</LinearLayout>
