<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_normal_16">

    <LinearLayout
        android:id="@+id/credit_sum_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_larger_72"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_medial_32"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/credit_sum_caption"
                style="@style/credit_caption"
                android:text="@string/credit_sum"/>

            <TextView
                android:id="@+id/credit_sum_value"
                style="@style/credit_value"/>

            <ImageView
                android:id="@+id/credit_sum_img"
                style="@style/credit_edit_image"/>

        </LinearLayout>

        <SeekBar
            android:id="@+id/credit_sum_sb"
            style="@style/credit_seek_bar"
            android:max="199"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_line_1"
            android:background="@color/primary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/credit_length_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_larger_72"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_medial_32"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                style="@style/credit_caption"
                android:text="@string/credit_length"/>

            <TextView
                android:id="@+id/credit_length_value"
                style="@style/credit_value"/>

            <ImageView
                android:id="@+id/credit_length_img"
                style="@style/credit_edit_image"/>

        </LinearLayout>

        <SeekBar
            android:id="@+id/credit_length_sb"
            style="@style/credit_seek_bar"
            android:max="99"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_line_1"
            android:background="@color/primary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/credit_percent_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_larger_72"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_medial_32"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                style="@style/credit_caption"
                android:text="@string/credit_percent"/>

            <TextView
                android:id="@+id/credit_percent_value"
                style="@style/credit_value"/>

            <ImageView
                android:id="@+id/credit_percent_img"
                style="@style/credit_edit_image"/>

        </LinearLayout>

        <SeekBar
            android:id="@+id/credit_percent_sb"
            style="@style/credit_seek_bar"
            android:max="499"/>

    </LinearLayout>

</LinearLayout>